fixed overflow

--- a/style.css
+++ b/style.css
@@ -85,9 +85,10 @@ button {
 /* Main */
 
 main {
-  display: grid;
-  place-items: center;
-  height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: minmax(100dvh, min-content);
 }
 
 /* Card */
@@ -96,10 +97,9 @@ main {
   flex-direction: column;
   background-color: white;
   border-radius: 1rem;
-  overflow: hidden;
   margin: 5dvh auto;
   width: 90%;
-  height: 90dvh;
+  height: minmax(90vh, min-content);
 }
 
 @media screen and (min-width: 687px) {
@@ -123,6 +123,10 @@ main {
 
 /* Picture */
 
+.card img {
+  border-radius: 1rem 1rem 0 0;
+}
+
 @media screen and (min-width: 687px) {
   .card picture {
     width: 50%;
@@ -131,6 +135,7 @@ main {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 1rem 0 0 1rem;
   }
 }
 
@@ -149,7 +154,7 @@ main {
 }
 
 .description {
-  flex: 2;
+  flex: 0 1;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
